--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p>Hello Notice how this content isn't centered. To center it we need to wrap it</p>
+<p>He Notice how this content isn't centered. To center it we need to wrap it</p>
 
 	<section>
 		<h1>Here is some centered content, by wrapping it with a section tag</h1>
