--- a/index.html
+++ b/index.html
@@ -10,143 +10,93 @@
 
 <body>
 
-<p>He Notice how this content isn't centered. To center it we need to wrap it</p>
-
 	<section>
-		<h1>Here is some centered content, by wrapping it with a section tag</h1>
-		<p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci. </em></p>
+		<h1>Wellington Network Infrastructure</h1>
+		<p> <strong> The components of network infrastructure in Wellington could be manifested in almost everywhere.</strong> </p>
 
-		<p>Notice how if you change the width of your browser it stays in the center</p>
 	</section>
 
-	<section>
-		<p>This is a simple nav bar, which is full width of the page</p>
-	</section>
 	<nav>
-		<h3>A nice navigation bar</h3>
-		<a href="#one">Link 1</a>
-		<a href="#two">Link 2</a>
-		<a href="#three">Link 3</a>
+		<h3>Examples of Internet Infrastructure</h3>
+		<a href="#one">CCTV</a>
+		<a href="#two">Traffic Light</a>
+	 
 	</nav>
 
-	<section id="one">
-		<p><strong>Content number one</strong></p>
-		<p>By setting an a tag's href to "#one", it will link to a html element with the id of "one". <a href="https://css-tricks.com/hash-tag-links-padding/">More info about that here</a></p>
-	</section>
-
-	<section id="two">
-		<p><strong>Content number 2</strong></p>
-	</section>
-
-	<section id="three">
-		<p><strong>Content number 3</strong></p>
-	</section>
-
-	<header>
-		<section>
-			<h1>This header has a solid background and some padding</h1>
-			<p>There is also a section tag inside it to center this content</p>
-		</section>
-	</header>
-
-	
-
 	<section>
-		<h3>Grids</h3>
-
-		<p>Use grids to divide up or layout content. For example, putting an image on the left, and lots to text on the right</p>
-
-		<p>I've added a 'show' class so you can see where the grids are. Use chrome's web inspector tools to take a closer look</p>
-
-
-		<div class="g-row show"> <!--first wrap all grid cells in a g-row-->
-			<div class="g-50 show">
-				50% width .g-50
-			</div>
-			<div class="g-50 show">
-				50% width .g-50
-			</div>
-
-			<div class="g-30 show">
-				30% width .g-30
-			</div>
-
-			<div class="g-70 show">
-				70% width .g-70
-			</div>
-		</div>
-
-		<p>The other cool things about grids, is that 50% width means 50% of the div's <em>parent</em>. This means you can put cells in cells to get infinitly smaller sizes. The possiblities are endless!</p>
-
-		<div class="g-row show"> <!--first wrap all grid cells in a g-row-->
-			<div class="g-50 show">
-				<div class="g-50 show">
-					<div class="g-50 show">
-						50%
-					</div>
-					<div class="g-50 show">
-						50%
-					</div>
-				</div>
-				<div class="g-50 show">
-					50%
-				</div>
-			</div>
-			<div class="g-50 show">
-				50%
-			</div>
-		</div>
-
-		<p>Here's a simple page using all of these elements</p>
+		<p>Traffic systems and CCTV networks are appropriate and typical demonstrations of network infrastructure in our daily life.</p>
+		 
 	</section>
 
+	 
+	 
 	<header>
-		<section>
-			<h1>Infrastructure of Wellington</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<section id="one">
+			<h1>Network Infrastructure of Wellington</h1>
+			<p>CCTV systems in Wellington.</p>
 		</section>
 	</header>
 
 	<section>
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cover.jpg">
+				<img src="img/camera1.jpg">
 			</div>
 			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+				<h3>Personal Camera</h3>
+				<p>Personal CCTV such as the one installed outside the store by store owner could be used to check out the situation nearby the private property.</p>
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cover.jpg">
+				<img src="img/camera2.jpg">
 			</div>
 			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+				<h3>Traffic CCTV</h3>
+				<p>Traffic cameras can record the transport situation in a specific region.</p>
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cover.jpg">
+				<img src="img/camera3.jpg">
 			</div>
 			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+				<h3>CCTV in Institutions</h3>
+				<p>CCTV in public institution such as the camera in parking shed around the school can be used to check and record the situation.</p>
+			</div>
+		 
+	</section>
+
+	<header>
+		<section id="two">
+			<h1>Network Infrastructure of Wellington</h1>
+			<p>Traffic Tools in Wellington.</p>
+		</section>
+	</header>
+
+	<section>
+		<div class="g-row">
+			<div class="g-30">
+				<img src="img/light1.jpg">
+			</div>
+			<div class="g-70 padded">
+				<h3>Traffic Controller</h3>
+				<p>The little gray box, a traffic controller operating the traffic signal light, is a tiny component of the tremendous traffic network.</p>
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cover.jpg">
+				<img src="img/light2.jpg">
 			</div>
 			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+				<h3>Traffic Light</h3>
+				<p>Traffic lights existing on the road are interconnected, cooperating and working witheach other to maintain the discipline of the trafic on road.</p>
 			</div>
 		</div>
+		 
 	</section>
 
 </body>
